# embassy

./: README.md  embassy.py  pyproject.toml
Examples/: Demonstration.ipynb  embassy.py
Examples/.ipynb_checkpoints/: Demonstration-checkpoint.ipynb  Notebook_1-checkpoint.ipynb
Examples/data/: aminer_node2vec_0.csv  aminer_node2vec_1.csv  aminer_node2vec_2.csv  aminer_node2vec_3.csv  aminer_temporalnode2vec_0.csv  aminer_temporalnode2vec_1.csv  aminer_temporalnode2vec_2.csv  aminer_temporalnode2vec_3.csv
