[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "embassy"
author = "Furkan Gürsoy"
author-email = "furkan.gursoy@boun.edu.tr"
home-page = "https://github.com/furkangursoy/embassy"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"

